Experience badge text not readable on mobile fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -321,6 +321,12 @@ header h1 {
 	}
 }
 
+@media only screen and (max-width: 1170px) {
+  .experience-badge {
+    font-weight: normal !important;
+  }
+}
+
 .modal-inside .modal-content {
 	background: white;
 }
